--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link rel="stylesheet" href="index.css" />
     <title>Frontend Mentor | Bento grid</title>
@@ -23,7 +23,7 @@
           with AI
         </h1>
         <img
-          src="assets/images/illustration-five-stars.webp"
+          src="illustration-five-stars.webp"
           alt="Five Stars"
           width="50%"
         />
@@ -31,7 +31,7 @@
       </div>
       <div class="container2">
         <img
-          src="assets/images/illustration-multiple-platforms.webp"
+          src="illustration-multiple-platforms.webp"
           alt="Social Links"
           width="100%"
         />
@@ -47,7 +47,7 @@
           posting schedule.
         </h2>
         <img
-          src="assets/images/illustration-consistent-schedule.webp"
+          src="illustration-consistent-schedule.webp"
           alt="schedule post"
           width="60%"
         />
@@ -55,7 +55,7 @@
       <div class="container4">
         <h2>Schedule to social media.</h2>
         <img
-          src="assets/images/illustration-schedule-posts.webp"
+          src="illustration-schedule-posts.webp"
           alt="schedule post"
           width="100%"
         />
@@ -68,7 +68,7 @@
 
       <div class="container5">
         <img
-          src="assets/images/illustration-grow-followers.webp"
+          src="illustration-grow-followers.webp"
           alt="Grow Followers"
           width="80%"
         />
@@ -82,7 +82,7 @@
         <h1><b>>56%</b></h1>
         <p>faster audience growth</p>
         <img
-          src="assets/images/illustration-audience-growth.webp"
+          src="illustration-audience-growth.webp"
           alt="audience growth"
           width="50%"
         />
@@ -93,7 +93,7 @@
           content <span class="quick"> <span class="quick"><i>quicker.</i></span>
         </h2>
         <img
-          src="assets/images/illustration-create-post.webp"
+          src="illustration-create-post.webp"
           alt="Create Post"
           width="50%"
         />
@@ -104,7 +104,7 @@
           using AI.
         </h2>
         <img
-          src="assets/images/illustration-ai-content.webp"
+          src="illustration-ai-content.webp"
           alt="Ai content"
           width="50%"
         />
